Implantação JavaFX